--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "version": "1.0.0",
   "name": "x25",
+  "description": "x25",
   "scripts": {
     "build:lib": "babel src --out-dir lib",
     "build:umd": "cross-env NODE_ENV=development webpack src/index.js dist/redux-paginator-immutable.js",
@@ -11,10 +12,7 @@
     "flow": "flow check --color=always",
     "eslint": "eslint src --fix",
     "prepublish": "npm run test && npm run eslint && npm run flow && npm run clean && npm run build",
-    "test": "mocha --compilers js:babel-register --recursive --recursive \"src/**/__tests__/*\" --require src/__tests__/setup.js",
-    "test:watch": "npm test -- --watch",
-    "test:cov": "babel-node ./node_modules/isparta/bin/isparta cover ./node_modules/mocha/bin/_mocha -- --recursive \"src/**/__tests__/*\" --require src/__tests__/setup.js",
-    "test:codecov": "cat ./coverage/coverage.json | ./node_modules/.bin/codecov"
+    "test": "jest"
   },
   "babel": {
     "presets": [
@@ -57,9 +55,9 @@
     "setupFiles": [
       "<rootDir>/conf/polyfills/tempPolyfills.js"
     ],
-    "testRegex": "client/.*-test.js$",
+    "testRegex": "src/.*-test.js$",
     "modulePaths": [
-      "client"
+      "src"
     ]
   },
   "devDependencies": {
