--- a/package.json
+++ b/package.json
@@ -2,18 +2,33 @@
   "version": "1.0.0",
   "name": "x25",
   "description": "x25",
+  "main": "./lib/index.js",
   "scripts": {
     "build:lib": "babel src --out-dir lib",
-    "build:umd": "cross-env NODE_ENV=development webpack src/index.js dist/redux-paginator-immutable.js",
-    "build:umd:min": "cross-env NODE_ENV=production webpack src/index.js dist/redux-paginator-immutable.min.js",
-    "build": "npm run build:lib && npm run build:umd && npm run build:umd:min && node ./prepublish.js",
+    "build": "npm run build:lib",
     "clean": "rimraf dist lib",
     "check": "npm-check-updates -a && npm update",
     "flow": "flow check --color=always",
     "eslint": "eslint src --fix",
-    "prepublish": "npm run test && npm run eslint && npm run flow && npm run clean && npm run build",
+    "prepublishOnly": "npm run clean && npm run build",
     "test": "jest"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cristian-sima/x25.git"
+  },
+  "files": [
+    "dist",
+    "lib",
+    "src"
+  ],
+  "keywords": [],
+  "author": "Cristian Sima",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/cristian-sima/x25/issues"
+  },
+  "homepage": "https://github.com/cristian-sima/x25#readme",
   "babel": {
     "presets": [
       "env",
@@ -61,11 +76,11 @@
     ]
   },
   "devDependencies": {
-    "webpack-dev-server": "^3.1.9",
-    "npm-check-updates": "^2.14.2"
+    "babel-cli": "^6.26.0",
+    "npm-check-updates": "^2.14.2",
+    "webpack-dev-server": "^3.1.9"
   },
   "dependencies": {
-    "babel": "^6.23.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
@@ -86,8 +101,10 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "bootstrap": "^4.1.3",
+    "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
     "dezalgo": "^1.0.3",
+    "es3ify": "^0.2.2",
     "eslint": "^5.6.1",
     "eslint-plugin-flowtype": "^2.50.3",
     "eslint-plugin-jsx-a11y": "^6.1.1",
@@ -96,6 +113,8 @@
     "flow-bin": "^0.81.0",
     "flow-status-webpack-plugin": "^0.1.7",
     "font-awesome": "^4.7.0",
+    "fs": "0.0.1-security",
+    "glob": "^7.1.3",
     "history": "^4.7.2",
     "humps": "^2.0.1",
     "immutable": "^4.0.0-rc.10",
@@ -126,7 +145,6 @@
     "redux": "^4.0.0",
     "redux-form": "^7.4.2",
     "redux-immutable": "^4.0.0",
-    "redux-paginator-immutable": "^1.6.3",
     "redux-promise-middleware": "^5.1.1",
     "redux-saga": "^0.16.0",
     "redux-thunk": "^2.3.0",
@@ -142,7 +160,8 @@
     "webpack-git-hash": "^1.0.2",
     "webpack-preset": "^0.2.0",
     "webpack-preset-babel": "^0.2.0",
-    "webpack-preset-babel-stage-2": "^0.2.0"
+    "webpack-preset-babel-stage-2": "^0.2.0",
+    "x25": "^1.6.3"
   },
   "author": "Cristian Sima"
 }
