--- a/.flowconfig
+++ b/.flowconfig
@@ -16,3 +16,4 @@ module.ignore_non_literal_requires=true
 suppress_type=$FlowIssue
 suppress_comment= \\(.\\|\n\\)*\\$FlowFixMe
 suppress_type=$Intl
+module.name_mapper='^src/\(.*\)$' -> '<PROJECT_ROOT>/src/\1'
