--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.1.0",
+  "version": "1.1.1",
   "name": "x25",
   "description": "x25",
   "scripts": {
@@ -94,6 +94,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "bootstrap": "^4.1.3",
+    "classnames": "^2.2.6",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
     "dezalgo": "^1.0.3",
@@ -110,7 +111,7 @@
     "glob": "^7.1.3",
     "history": "^4.7.2",
     "humps": "^2.0.1",
-    "immutable": "^4.0.0-rc.10",
+    "immutable": "^4.0.0-rc.12",
     "jest": "^23.6.0",
     "jest-immutable-matchers": "^2.0.1",
     "json-loader": "^0.5.7",
