--- a/.flowconfig
+++ b/.flowconfig
@@ -1,5 +1,4 @@
 [ignore]
-./node_modules/*
 .*/node_modules/npm
 .*/node_modules/npmi
 [include]
@@ -16,4 +15,5 @@ module.ignore_non_literal_requires=true
 suppress_type=$FlowIssue
 suppress_comment= \\(.\\|\n\\)*\\$FlowFixMe
 suppress_type=$Intl
-module.name_mapper='^src/\(.*\)$' -> '<PROJECT_ROOT>/src/\1'
+module.system.node.resolve_dirname=node_modules
+module.system.node.resolve_dirname=client
