--- a/package.json
+++ b/package.json
@@ -72,8 +72,8 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "npm-check-updates": "^2.14.2",
-    "webpack-dev-server": "^3.1.9"
+    "npm-check-updates": "^2.15.0",
+    "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
     "babel-core": "^6.26.3",
@@ -89,7 +89,7 @@
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-transform-react-constant-elements": "^6.23.0",
     "babel-plugin-transform-react-inline-elements": "^6.22.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.18",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.20",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
@@ -98,15 +98,15 @@
     "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
     "cross-env": "^5.2.0",
-    "css-loader": "^1.0.0",
+    "css-loader": "^1.0.1",
     "dezalgo": "^1.0.3",
     "es3ify": "^0.2.2",
-    "eslint": "^5.6.1",
-    "eslint-plugin-flowtype": "^2.50.3",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint": "^5.9.0",
+    "eslint-plugin-flowtype": "^3.2.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
     "file-loader": "^2.0.0",
-    "flow-bin": "^0.81.0",
+    "flow-bin": "^0.86.0",
     "flow-status-webpack-plugin": "^0.1.7",
     "font-awesome": "^4.7.0",
     "fs": "0.0.1-security",
@@ -119,40 +119,40 @@
     "json-loader": "^0.5.7",
     "lodash.memoize": "^4.1.2",
     "moment": "^2.22.2",
-    "node-sass": "^4.9.3",
-    "normalizr": "^3.2.4",
+    "node-sass": "^4.10.0",
+    "normalizr": "^3.3.0",
     "npm": "^6.4.1",
     "postcss-loader": "^3.0.0",
-    "query-string": "^6.1.0",
-    "react": "^16.5.2",
+    "query-string": "^6.2.0",
+    "react": "^16.6.3",
     "react-addons-shallow-compare": "^15.6.2",
     "react-autosuggest": "^9.4.2",
-    "react-dom": "^16.5.2",
-    "react-dropzone": "^5.1.1",
-    "react-hot-loader": "^4.3.11",
+    "react-dom": "^16.6.3",
+    "react-dropzone": "^7.0.1",
+    "react-hot-loader": "^4.3.12",
     "react-notification-system-redux": "^1.2.0",
     "react-raphael": "^0.9.0",
-    "react-redux": "^5.0.7",
+    "react-redux": "^5.1.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^5.0.0-alpha.9",
     "react-sidebar": "^3.0.2",
-    "reactstrap": "^6.4.0",
-    "redux": "^4.0.0",
+    "reactstrap": "^6.5.0",
+    "redux": "^4.0.1",
     "redux-form": "^7.4.2",
     "redux-immutable": "^4.0.0",
     "redux-promise-middleware": "^5.1.1",
-    "redux-saga": "^0.16.0",
+    "redux-saga": "^0.16.2",
     "redux-thunk": "^2.3.0",
     "redux-ui": "0.1.1",
     "reselect": "^4.0.0",
     "sass-loader": "^7.1.0",
     "scss-compile": "^0.1.7",
-    "style-loader": "^0.23.0",
-    "superagent": "^4.0.0-beta.5",
+    "style-loader": "^0.23.1",
+    "superagent": "^4.0.0",
     "superagent-promise": "^1.1.0",
-    "url-loader": "^1.1.1",
-    "webpack": "^4.20.2",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2",
     "webpack-git-hash": "^1.0.2",
     "webpack-preset": "^0.2.0",
