--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
      "react/no-deprecated": 0,
      "max-lines-per-function": ["error", { "max": 300 }],
 
+      "react/jsx-fragments": 0,
       "react/jsx-handler-names":0,
       "no-confusing-arrow":0,
       "max-statements":0,
