--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "2.1.6",
+  "version": "2.2.0",
   "name": "x25",
   "description": "x25",
   "scripts": {
@@ -70,6 +70,7 @@
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
+    "@sentry/browser": "^4.5.3",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
