--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "2.3.9",
+  "version": "2.4.3",
   "name": "x25",
   "description": "x25",
   "scripts": {
@@ -137,6 +137,7 @@
     "redux": "^4.0.1",
     "redux-form": "^7.4.2",
     "redux-immutable": "^4.0.0",
+    "redux-injector": "^0.1.0",
     "redux-promise-middleware": "^5.1.1",
     "redux-saga": "^0.16.2",
     "redux-thunk": "^2.3.0",
