--- a/.flowconfig
+++ b/.flowconfig
@@ -1,8 +1,11 @@
 [ignore]
-.*/node_modules/npm
-.*/node_modules/npmi
+.*/node_modules/fbjs/.*
+.*/node_modules/config-chain/test/broken.json
+.*/node_modules/npmconf/test/.*
+.*/node_modules/npm/test/.*
 [include]
 [libs]
+src/types
 [options]
 emoji=true
 esproposal.class_static_fields=enable
@@ -15,5 +18,4 @@ module.ignore_non_literal_requires=true
 suppress_type=$FlowIssue
 suppress_comment= \\(.\\|\n\\)*\\$FlowFixMe
 suppress_type=$Intl
-module.system.node.resolve_dirname=node_modules
-module.system.node.resolve_dirname=client
+module.name_mapper='^src\(.*\)$' -> '<PROJECT_ROOT>/src/\1'
