--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "2.5.3",
+  "version": "2.5.4",
   "name": "x25",
   "description": "x25",
   "scripts": {
@@ -11,7 +11,7 @@
     "flow": "flow check --color=always",
     "eslint": "eslint src --fix",
     "copy": "copy package.json dist",
-    "pre": "npm run test && npm run eslint  && npm run clean && npm run build && npm run copy",
+    "pre": "npm run test && npm run eslint && npm run flow && npm run clean && npm run build && npm run copy",
     "load": "npm run pre && cd dist && npm publish",
     "test": "jest"
   },
@@ -126,12 +126,14 @@
     "react-dom": "^16.6.3",
     "react-dropzone": "^7.0.1",
     "react-hot-loader": "^4.3.12",
+    "react-loadable": "^5.5.0",
     "react-notification-system-redux": "^1.2.0",
     "react-raphael": "^0.9.0",
     "react-redux": "^5.1.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^5.0.0-alpha.9",
+    "react-select": "^2.3.0",
     "react-sidebar": "^3.0.2",
     "reactstrap": "^6.5.0",
     "redux": "^4.0.1",
