--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "2.5.7",
+  "version": "2.5.9",
   "name": "x25",
   "description": "x25",
   "scripts": {
@@ -90,6 +90,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "big.js": "^5.2.2",
     "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
     "copy": "^0.3.2",
