--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "flow": "flow check --color=always",
     "eslint": "eslint src --fix",
     "copy": "copy package.json dist",
-    "pre": "npm run test && npm run eslint && npm run flow && npm run clean && npm run build && npm run copy && npm version patch",
+    "pre": "npm run test && npm run eslint && npm run flow && npm run clean && npm run build && npm run copy && npm version patch --force",
     "load": "npm run pre && cd dist && npm publish",
     "test": "jest"
   },
