--- a/package.json
+++ b/package.json
@@ -145,6 +145,7 @@
     "redux-form": "^8.2.0",
     "redux-immutable": "^4.0.0",
     "redux-injector": "^0.1.0",
+    "redux-paginator-immutable": "^2.6.1",
     "redux-promise-middleware": "^6.1.0",
     "redux-saga": "^1.0.2",
     "redux-thunk": "^2.3.0",
