--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "clean": "rimraf dist dist",
     "check": "npm-check -u -i babel-jest -i jest --specials=bin,eslint,babel,webpack",
     "flow": "flow check --color=always",
-    "eslint": "eslint src --fix",
+    "eslint": "eslint ./src/*/* --fix",
     "copy": "copy package.json dist",
     "pre": "npm run test && npm run eslint && npm run flow && npm run clean && npm run build && npm run copy",
     "load": "npm run pre && cd dist && npm publish",
@@ -88,69 +88,58 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "cross-env": "^5.2.0",
+    "cross-env": "^6.0.3",
     "css-loader": "^3.2.0",
     "es3ify": "^0.2.2",
-    "eslint": "^6.1.0",
-    "eslint-plugin-flowtype": "^4.1.0",
+    "eslint": "^6.6.0",
+    "eslint-plugin-flowtype": "^4.4.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.14.3",
-    "file-loader": "^4.2.0",
-    "flow-bin": "^0.104.0",
+    "eslint-plugin-react": "^7.16.0",
+    "file-loader": "^4.3.0",
+    "flow-bin": "^0.112.0",
     "flow-status-webpack-plugin": "^0.1.7",
     "jest": "^23.6.0",
     "jest-immutable-matchers": "^2.0.1",
     "json-loader": "^0.5.7",
-    "node-sass": "^4.12.0",
-    "npm": "^6.10.3",
+    "node-sass": "^4.13.0",
+    "npm": "^6.13.1",
     "npm-check": "^5.9.0",
     "npm-check-unused": "^6.0.0",
-    "npm-check-updates": "^3.1.20",
+    "npm-check-updates": "^3.2.1",
     "postcss-loader": "^3.0.0",
-    "react-hot-loader": "^4.12.10",
-    "sass-loader": "^7.2.0",
+    "react-hot-loader": "^4.12.18",
+    "sass-loader": "^8.0.0",
     "scss-compile": "^0.1.7",
     "style-loader": "^1.0.0",
-    "url-loader": "^2.1.0",
-    "webpack": "^4.39.1",
-    "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.7.2",
+    "url-loader": "^2.3.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0",
     "webpack-git-hash": "^1.0.2",
     "webpack-preset": "^0.2.0",
     "webpack-preset-babel": "^0.2.0",
     "webpack-preset-babel-stage-2": "^0.2.0"
   },
   "dependencies": {
-    "@sentry/browser": "^5.6.1",
+    "@sentry/browser": "^5.9.1",
     "big.js": "^5.2.2",
-    "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "copy": "^0.3.2",
-    "history": "^4.9.0",
     "immutable": "^4.0.0-rc.12",
-    "lodash.memoize": "^4.1.2",
     "moment": "^2.22.2",
-    "react": "^16.9.0",
-    "react-autosuggest": "^9.4.2",
-    "react-dom": "^16.9.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-loadable": "^5.5.0",
     "react-notification-system-redux": "^2.0.0",
-    "react-redux": "^7.1.0",
-    "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1",
-    "react-select": "^3.0.4",
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
+    "react-select": "^3.0.8",
     "react-sidebar": "^3.0.2",
-    "reactstrap": "^8.0.1",
+    "reactstrap": "^8.1.1",
     "redux": "^4.0.4",
     "redux-form": "^8.2.5",
-    "redux-immutable": "^4.0.0",
     "redux-injector": "^0.1.0",
-    "redux-paginator-immutable": "^2.6.1",
-    "redux-promise-middleware": "^6.1.1",
-    "redux-saga": "^1.0.5",
-    "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
-    "superagent": "^5.1.0",
-    "superagent-promise": "^1.1.0"
+    "superagent": "^5.1.1"
   }
 }
