--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "2.7.7",
+  "version": "2.7.8",
   "name": "x25",
   "description": "x25",
   "scripts": {
@@ -9,7 +9,7 @@
     "clean": "rimraf dist dist",
     "check": "npm-check -u -i babel-jest -i jest --specials=bin,eslint,babel,webpack",
     "flow": "flow check --color=always",
-    "eslint": "eslint ./src/*/* --fix",
+    "eslint": "eslint --ext .jsx,.js src --fix",
     "copy": "copy package.json dist",
     "pre": "npm run test && npm run eslint && npm run flow && npm run clean && npm run build && npm run copy",
     "load": "npm run pre && cd dist && npm publish",
