--- a/package.json
+++ b/package.json
@@ -127,10 +127,10 @@
     "copy": "^0.3.2",
     "immutable": "^4.0.0-rc.12",
     "moment": "^2.22.2",
-    "react": "^16.12.0",
+    "react": "~16.12.0",
     "react-dom": "^16.12.0",
-    "react-loadable": "^5.5.0",
-    "react-notification-system-redux": "^2.0.0",
+    "react-loadable": "~5.5.0",
+    "react-notification-system-redux": "~2.0.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-select": "^3.0.8",
