--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
-  "version": "5.0.1",
+  "version": "5.0.2",
   "name": "x25",
   "description": "x25",
   "scripts": {
-    "build-scss": "node-sass --output-style compressed src -o dist",
-    "build-babel": "babel src --out-dir dist",
-    "build": "npm run build-scss && npm run build-babel",
-    "clean": "rimraf dist dist",
+    "load": "npm run intern-pre && cd dist && npm publish",
+    "load-beta": "npm run intern-pre && cd dist && npm publish --tag beta",
     "check": "npm-check -u -i babel-jest -i jest -i history --specials=bin,eslint,babel,webpack",
-    "flow": "flow check --color=always",
     "eslint": "eslint --ext .jsx,.js src --fix",
-    "copy": "copy package.json dist",
-    "pre": "npm run test && npm run eslint && npm run flow && npm run clean && npm run build && npm run copy",
-    "load": "npm run pre && cd dist && npm publish",
-    "load-beta": "npm run pre && cd dist && npm publish --tag beta",
-    "test": "jest"
+    "intern-pre": "npm run intern-test && npm run eslint && npm run intern-clean && npm run intern-build && npm run intern-copy",
+    "intern-build-scss": "node-sass --output-style compressed src -o dist",
+    "intern-build-babel": "babel src --out-dir dist",
+    "intern-copy": "copy package.json dist",
+    "intern-build": "npm run intern-build-scss && npm run intern-build-babel",
+    "intern-clean": "rimraf dist dist",
+    "intern-test": "jest"
   },
   "repository": {
     "type": "git",
@@ -74,7 +73,7 @@
     "babel-eslint": "^10.0.2",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.6",
-    "babel-plugin-add-module-exports": "^1.0.2",
+    "babel-plugin-add-module-exports": "^1.0.4",
     "babel-plugin-flow-react-proptypes": "^25.1.0",
     "babel-plugin-react-html-attrs": "^2.1.0",
     "babel-plugin-syntax-flow": "^6.18.0",
@@ -103,8 +102,8 @@
     "jest-immutable-matchers": "^2.0.1",
     "json-loader": "^0.5.7",
     "node-sass": "^4.13.0",
-    "npm": "^6.13.1",
-    "npm-check": "^5.9.0",
+    "npm": "^8.3.2",
+    "npm-check": "^5.9.2",
     "npm-check-unused": "^6.0.0",
     "npm-check-updates": "^3.2.1",
     "postcss-loader": "^3.0.0",
@@ -131,12 +130,12 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-loadable": "~5.5.0",
-    "react-notification-system-redux": "~2.0.0",
+    "react-notification-system-redux": "^2.0.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-select": "^3.0.8",
     "react-sidebar": "^3.0.2",
-    "reactstrap": "^9.0.0-0",
+    "reactstrap": "^9.0.1",
     "redux": "^4.0.4",
     "redux-form": "^8.2.5",
     "redux-injector": "^0.1.0",
