--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,8 @@
    "parser":"babel-eslint",
    "extends":[
       "eslint:all",
-      "plugin:react/all"
+      "plugin:react/all",
+      "plugin:react-hooks/recommended"
    ],
    "settings": {
     "react": {
