--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "2.9.2",
+  "version": "17.0.0",
   "name": "x25",
   "description": "x25",
   "scripts": {
@@ -20,7 +20,7 @@
     "url": "git+https://github.com/cristian-sima/x25.git"
   },
   "keywords": [],
-  "author": "Cristian Sima",
+  "author": "SC SIDEWORK SRL",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/cristian-sima/x25/issues"
@@ -56,7 +56,7 @@
     }
   },
   "engines": {
-    "node": ">= 6.3.1"
+    "node": ">= 15.0.0"
   },
   "jest": {
     "transform": {
@@ -95,6 +95,7 @@
     "eslint-plugin-flowtype": "^4.4.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "file-loader": "^4.3.0",
     "flow-bin": "^0.112.0",
     "flow-status-webpack-plugin": "^0.1.7",
@@ -103,11 +104,10 @@
     "json-loader": "^0.5.7",
     "node-sass": "^4.13.0",
     "npm": "^6.13.1",
-    "npm-check": "^5.9.0",
+    "npm-check": "^5.9.2",
     "npm-check-unused": "^6.0.0",
     "npm-check-updates": "^3.2.1",
     "postcss-loader": "^3.0.0",
-    "react-hot-loader": "^4.12.18",
     "sass-loader": "^8.0.0",
     "scss-compile": "^0.1.7",
     "style-loader": "^1.0.0",
@@ -127,19 +127,19 @@
     "copy": "^0.3.2",
     "immutable": "^4.0.0-rc.12",
     "moment": "^2.22.2",
-    "react": "~16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-loadable": "~5.5.0",
-    "react-notification-system-redux": "~2.0.0",
-    "react-redux": "^7.1.3",
+    "react-notification-system-redux2": "^2.0.1",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.1.2",
-    "react-select": "^3.0.8",
+    "react-select": "^5.2.2",
     "react-sidebar": "^3.0.2",
-    "reactstrap": "^8.1.1",
+    "reactstrap": "^9.0.1",
     "redux": "^4.0.4",
-    "redux-form": "^8.2.5",
+    "redux-form": "^8.3.8",
     "redux-injector": "^0.1.0",
-    "reselect": "^4.0.0",
+    "reselect": "^4.1.5",
     "superagent": "^5.1.1"
   }
 }
