--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "5.0.2",
+  "version": "17.0.0",
   "name": "x25",
   "description": "x25",
   "scripts": {
@@ -7,20 +7,17 @@
     "load-beta": "npm run intern-pre && cd dist && npm publish --tag beta",
     "check": "npm-check -u -i babel-jest -i jest -i history --specials=bin,eslint,babel,webpack",
     "eslint": "eslint --ext .jsx,.js src --fix",
-    "intern-pre": "npm run intern-test && npm run eslint && npm run intern-clean && npm run intern-build && npm run intern-copy",
-    "intern-build-scss": "node-sass --output-style compressed src -o dist",
-    "intern-build-babel": "babel src --out-dir dist",
-    "intern-copy": "copy package.json dist",
-    "intern-build": "npm run intern-build-scss && npm run intern-build-babel",
-    "intern-clean": "rimraf dist dist",
-    "intern-test": "jest"
+    "copy": "copy package.json dist",
+    "pre": "npm run test && npm run eslint && npm run clean && npm run build && npm run copy",
+    "load": "npm run pre && cd dist && npm publish",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/cristian-sima/x25.git"
   },
   "keywords": [],
-  "author": "Cristian Sima",
+  "author": "SC SIDEWORK SRL",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/cristian-sima/x25/issues"
@@ -95,6 +92,7 @@
     "eslint-plugin-flowtype": "^4.4.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "file-loader": "^4.3.0",
     "flow-bin": "^0.112.0",
     "flow-status-webpack-plugin": "^0.1.7",
@@ -102,12 +100,11 @@
     "jest-immutable-matchers": "^2.0.1",
     "json-loader": "^0.5.7",
     "node-sass": "^4.13.0",
-    "npm": "^8.3.2",
+    "npm": "^6.13.1",
     "npm-check": "^5.9.2",
     "npm-check-unused": "^6.0.0",
     "npm-check-updates": "^3.2.1",
     "postcss-loader": "^3.0.0",
-    "react-hot-loader": "^4.12.18",
     "sass-loader": "^8.0.0",
     "scss-compile": "^0.1.7",
     "style-loader": "^1.0.0",
@@ -127,19 +124,19 @@
     "copy": "^0.3.2",
     "immutable": "^4.0.0-rc.12",
     "moment": "^2.22.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-loadable": "~5.5.0",
-    "react-notification-system-redux": "^2.0.1",
-    "react-redux": "^7.1.3",
+    "react-notification-system-redux2": "^2.0.1",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.1.2",
-    "react-select": "^3.0.8",
+    "react-select": "^5.2.2",
     "react-sidebar": "^3.0.2",
     "reactstrap": "^9.0.1",
     "redux": "^4.0.4",
-    "redux-form": "^8.2.5",
+    "redux-form": "^8.3.8",
     "redux-injector": "^0.1.0",
-    "reselect": "^4.0.0",
+    "reselect": "^4.1.5",
     "superagent": "^5.1.1"
   }
 }
