--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "version": "17.0.0",
+  "version": "17.0.1",
   "name": "x25",
   "description": "x25",
   "scripts": {
-    "build-scss": "node-sass --output-style compressed src -o dist",
-    "build-babel": "babel src --out-dir dist",
-    "build": "npm run build-scss && npm run build-babel",
-    "clean": "rimraf dist dist",
-    "check": "npm-check -u -i babel-jest -i jest -i history --specials=bin,eslint,babel,webpack",
-    "flow": "flow check --color=always",
+    "load": "npm run intern-pre && cd dist && npm publish",
+    "load-beta": "npm run intern-pre && cd dist && npm publish --tag beta",
+    "check": "npm-check -u -i babel-jest -i jest --specials=bin,eslint,babel,webpack",
     "eslint": "eslint --ext .jsx,.js src --fix",
-    "copy": "copy package.json dist",
-    "pre": "npm run test && npm run eslint && npm run clean && npm run build && npm run copy",
-    "load": "npm run pre && cd dist && npm publish",
-    "test": "jest"
+    "intern-pre": "npm run intern-test && npm run eslint && npm run intern-clean && npm run intern-build && npm run intern-copy",
+    "intern-build-scss": "node-sass --output-style compressed src -o dist",
+    "intern-build-babel": "babel src --out-dir dist",
+    "intern-copy": "copy package.json dist",
+    "intern-build": "npm run intern-build-scss && npm run intern-build-babel",
+    "intern-clean": "rimraf dist dist",
+    "intern-test": "jest"
   },
   "repository": {
     "type": "git",
@@ -73,7 +73,7 @@
     "babel-eslint": "^10.0.2",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.6",
-    "babel-plugin-add-module-exports": "^1.0.2",
+    "babel-plugin-add-module-exports": "^1.0.4",
     "babel-plugin-flow-react-proptypes": "^25.1.0",
     "babel-plugin-react-html-attrs": "^2.1.0",
     "babel-plugin-syntax-flow": "^6.18.0",
@@ -102,8 +102,7 @@
     "jest": "^23.6.0",
     "jest-immutable-matchers": "^2.0.1",
     "json-loader": "^0.5.7",
-    "node-sass": "^4.13.0",
-    "npm": "^6.13.1",
+    "node-sass": "^7.0.1",
     "npm-check": "^5.9.2",
     "npm-check-unused": "^6.0.0",
     "npm-check-updates": "^3.2.1",
@@ -121,12 +120,12 @@
     "webpack-preset-babel-stage-2": "^0.2.0"
   },
   "dependencies": {
-    "@sentry/browser": "^5.9.1",
-    "big.js": "^5.2.2",
-    "classnames": "^2.2.6",
+    "@sentry/browser": "^6.17.2",
+    "big.js": "^6.1.1",
+    "classnames": "^2.3.1",
     "copy": "^0.3.2",
     "immutable": "^4.0.0-rc.12",
-    "moment": "^2.22.2",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-loadable": "~5.5.0",
@@ -136,10 +135,10 @@
     "react-select": "^5.2.2",
     "react-sidebar": "^3.0.2",
     "reactstrap": "^9.0.1",
-    "redux": "^4.0.4",
+    "redux": "^4.1.2",
     "redux-form": "^8.3.8",
     "redux-injector": "^0.1.0",
     "reselect": "^4.1.5",
-    "superagent": "^5.1.1"
+    "superagent": "^7.1.1"
   }
 }
