--- a/package.json
+++ b/package.json
@@ -40,15 +40,13 @@
           "transform-class-properties",
           "transform-react-constant-elements",
           "transform-react-inline-elements",
-          "transform-react-remove-prop-types",
-          "transform-flow-strip-types"
+          "transform-react-remove-prop-types"
         ]
       },
       "developmentTime": {
         "plugins": [
           "transform-decorators-legacy",
           "react-hot-loader/babel",
-          "flow-react-proptypes",
           "react-html-attrs",
           "transform-class-properties"
         ]
@@ -120,7 +118,8 @@
     "webpack-preset-babel-stage-2": "^0.2.0"
   },
   "dependencies": {
-    "@sentry/browser": "^6.17.3",
+    "@docusaurus/react-loadable": "^5.5.2",
+    "@sentry/browser": "^6.17.7",
     "big.js": "^6.1.1",
     "classnames": "^2.3.1",
     "copy": "^0.3.2",
@@ -128,7 +127,6 @@
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-loadable": "~5.5.0",
     "react-notification-system-redux2": "^3.0.4",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
