--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,14 @@
 {
     "cSpell.words": [
+        "camelcase",
+        "jsxdev",
+        "linebreak",
+        "multilines",
         "paginations",
         "paginators",
+        "paren",
+        "parens",
+        "pmmmwh",
         "sidebarprops",
         "SIDEWORK"
     ],
