--- a/package.json
+++ b/package.json
@@ -69,55 +69,37 @@
     ]
   },
   "devDependencies": {
-    "@types/react-sidebar": "^3.0.2",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/plugin-proposal-export-default-from": "^7.16.7",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-modules-commonjs": "^7.16.8",
+    "@babel/plugin-transform-react-constant-elements": "^7.16.7",
+    "@babel/plugin-transform-react-inline-elements": "^7.16.7",
+    "@babel/plugin-transform-typescript": "^7.16.8",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
+    "@sentry/webpack-plugin": "^1.18.5",
+    "@types/superagent": "^4.1.15",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^10.0.2",
-    "babel-jest": "^23.6.0",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-add-module-exports": "^1.0.4",
-    "babel-plugin-react-html-attrs": "^2.1.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.5",
-    "babel-plugin-transform-react-constant-elements": "^6.23.0",
-    "babel-plugin-transform-react-inline-elements": "^6.22.0",
+    "babel-loader": "^8.2.3",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "cross-env": "^6.0.3",
-    "css-loader": "^3.2.0",
-    "es3ify": "^0.2.2",
+    "babel7-jest": "^1.0.1",
+    "cli-color": "^2.0.1",
+    "css-loader": "^6.6.0",
     "eslint": "^8.9.0",
-    "eslint-config-eslint": "^7.0.0",
     "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.16.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "file-loader": "^4.3.0",
-    "jest": "^23.6.0",
-    "jest-immutable-matchers": "^2.0.1",
-    "json-loader": "^0.5.7",
-    "node-sass": "^4.13.0",
-    "npm-check": "^5.9.2",
-    "npm-check-unused": "^6.0.0",
-    "npm-check-updates": "^3.2.1",
-    "postcss-loader": "^3.0.0",
-    "sass-loader": "^8.0.0",
-    "scss-compile": "^0.1.7",
-    "style-loader": "^1.0.0",
-    "url-loader": "^2.3.0",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0",
-    "webpack-git-hash": "^1.0.2",
-    "webpack-preset": "^0.2.0",
-    "webpack-preset-babel": "^0.2.0",
-    "webpack-preset-babel-stage-2": "^0.2.0"
+    "eslint-plugin-json-files": "^1.3.0",
+    "eslint-plugin-react": "^7.28.0",
+    "jest-cli": "^27.5.1",
+    "react-hot-loader": "^4.13.0",
+    "react-refresh": "^0.11.0",
+    "redux-devtools-extension": "^2.13.9",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.68.0",
+    "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
     "@docusaurus/react-loadable": "^5.5.2",
