--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "exclude": ["./lib/*", "./node_modules/*", "./wiki/*", ".vscode/*"],
-  "include": ["./src/*", "./index.d.ts"],
+  "include": ["./src/*", "./index.d.ts", "./types.d.ts"],
   "compilerOptions": {
     "allowJs": true,
     "noEmit": false,
@@ -17,12 +17,10 @@
     "target": "es6",
     "declaration": true,
     // Ensure that Babel can safely transpile files in the TypeScript project
-    // "paths": {
-    //   "src/*": [ "./client/_config/*" ],
-    // },
+    "baseUrl": "./",
     "paths": {
-      "types": ["./src/types"]
-  },
+        "@types": [ "./src/types" ],
+      },
     /* Additional Checks */
     /* Advanced Options */
     /* Basic Options */
