--- a/package.json
+++ b/package.json
@@ -79,27 +79,18 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
-    "@sentry/webpack-plugin": "^1.18.5",
     "@types/superagent": "^4.1.15",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
     "babel-loader": "^8.2.3",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "babel7-jest": "^1.0.1",
-    "cli-color": "^2.0.1",
     "css-loader": "^6.6.0",
     "eslint": "^8.9.0",
     "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-json-files": "^1.3.0",
     "eslint-plugin-react": "^7.28.0",
     "jest-cli": "^27.5.1",
-    "react-hot-loader": "^4.13.0",
-    "react-refresh": "^0.11.0",
-    "redux-devtools-extension": "^2.13.9",
     "style-loader": "^3.3.1",
-    "webpack": "^5.68.0",
-    "webpack-dev-server": "^4.7.4"
+    "webpack": "^5.68.0"
   },
   "dependencies": {
     "@docusaurus/react-loadable": "^5.5.2",
@@ -107,8 +98,10 @@
     "big.js": "^6.1.1",
     "classnames": "^2.3.1",
     "copy": "^0.3.2",
+    "depcheck": "^1.4.3",
     "immutable": "^4.0.0-rc.12",
     "moment": "^2.29.1",
+    "npm-check": "^5.9.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-notification-system-redux2": "^3.0.4",
