fix many problems

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,41 @@
 {
     "cSpell.words": [
+        "AIBK",
+        "BMAG",
+        "BNBG",
+        "BOMM",
+        "BRDE",
         "camelcase",
+        "captchas",
+        "CBKU",
         "CECE",
+        "CECEGR",
+        "cosovei",
         "cwrp",
+        "iban",
         "jsxdev",
         "linebreak",
+        "MTLC",
         "multilines",
+        "NABZ",
+        "nextany",
+        "Normalizr",
+        "NWBK",
         "paginations",
         "paginators",
         "paren",
         "parens",
         "pmmmwh",
+        "RABO",
+        "RNCB",
+        "Rouned",
+        "RZBR",
+        "SCBL",
         "sidebarprops",
-        "SIDEWORK"
+        "SIDEWORK",
+        "simona",
+        "ștefănică",
+        "țepeș"
     ],
     "files.exclude": {
         "**/.git": true,
