--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "17.0.19",
+  "version": "17.0.21",
   "name": "x25",
   "description": "x25",
   "types": "./dist/index.d.ts",
@@ -14,9 +14,9 @@
     "intern-build": "npm run intern-build-scss",
     "intern-clean": "rimraf dist dist",
     "intern-test": "jest",
-    "check": "npm run depcheck & npm run check:npm-check",
+    "check": "node script/check & npm run depcheck & npm run check:npm-check",
     "check:npm-check": "npm-check -u -i babel-jest -i jest --specials=bin,eslint,babel,webpack",
-    "depcheck": "depcheck --ignores=webpack-cli,@hot-loader/react-dom --ignore-patterns=server,node_modules,tmp,fonts",
+    "depcheck": "depcheck --ignores=@types/jest,@docusaurus/react-loadable,webpack-cli,@hot-loader/react-dom --ignore-patterns=server,node_modules,tmp,fonts",
     "check:global": "npm-check -gu",
     "ts:check": "tsc --noEmit",
     "ts": "tsc --declaration"
@@ -86,10 +86,8 @@
     "@babel/preset-typescript": "^7.16.7",
     "@types/jest": "^27.4.0",
     "@types/superagent": "^4.1.15",
-    "@typescript-eslint/eslint-plugin": "^5.11.0",
-    "@typescript-eslint/parser": "^5.11.0",
-    "add-matchers": "^0.6.2",
-    "babel-loader": "^8.2.3",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "copy": "^0.3.2",
     "css-loader": "^6.6.0",
@@ -107,22 +105,14 @@
   "dependencies": {
     "@docusaurus/react-loadable": "^5.5.2",
     "@sentry/browser": "^6.17.7",
-    "big.js": "^6.1.1",
     "classnames": "^2.3.1",
-    "copy-dir": "^1.3.0",
-    "copyfiles": "^2.4.1",
-    "cp": "^0.2.0",
     "immutable": "^4.0.0-rc.12",
     "jest": "^27.5.1",
     "moment": "^2.29.1",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "react-notification-system-redux2": "^3.0.4",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.1",
-    "react-select": "^5.2.2",
-    "react-sidebar": "^3.0.2",
     "reactstrap": "^9.0.1",
     "redux": "^4.1.2",
     "redux-form": "^8.3.8",
