--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "BNBG",
         "BOMM",
         "BRDE",
+        "builtins",
         "camelcase",
         "captchas",
         "CBKU",
@@ -12,20 +13,24 @@
         "CECEGR",
         "copyfiles",
         "cosovei",
+        "customizer",
         "cwrp",
         "iban",
         "jsxdev",
         "linebreak",
+        "loadash",
         "MTLC",
         "multilines",
         "NABZ",
         "nextany",
+        "nocheck",
         "Normalizr",
         "NWBK",
         "paginations",
         "paginators",
         "paren",
         "parens",
+        "plusplus",
         "pmmmwh",
         "RABO",
         "RNCB",
