--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
         "cosovei",
         "customizer",
         "cwrp",
+        "edonec",
         "iban",
         "jsxdev",
         "linebreak",
