--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "17.2.27",
+  "version": "17.2.28",
   "name": "x25",
   "description": "x25",
   "types": "./dist/index.d.ts",
@@ -74,51 +74,51 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.17.12",
-    "@babel/plugin-proposal-export-default-from": "^7.17.12",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-export-default-from": "^7.18.10",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-modules-commonjs": "^7.17.12",
-    "@babel/plugin-transform-react-constant-elements": "^7.17.12",
-    "@babel/plugin-transform-react-inline-elements": "^7.16.7",
-    "@babel/plugin-transform-typescript": "^7.17.12",
-    "@babel/preset-env": "^7.17.12",
-    "@babel/preset-react": "^7.17.12",
-    "@babel/preset-typescript": "^7.17.12",
-    "@types/jest": "^27.5.1",
+    "@babel/plugin-transform-modules-commonjs": "^7.18.6",
+    "@babel/plugin-transform-react-constant-elements": "^7.18.12",
+    "@babel/plugin-transform-react-inline-elements": "^7.18.6",
+    "@babel/plugin-transform-typescript": "^7.19.3",
+    "@babel/preset-env": "^7.19.3",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/jest": "^29.0.3",
     "@types/superagent": "^4.1.15",
-    "@typescript-eslint/eslint-plugin": "^5.25.0",
-    "@typescript-eslint/parser": "^5.25.0",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "^5.38.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "copy": "^0.3.2",
     "css-loader": "^6.7.1",
     "depcheck": "^1.4.3",
-    "eslint": "^8.15.0",
+    "eslint": "^8.24.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-react": "^7.29.4",
-    "jest-cli": "^28.1.0",
+    "eslint-plugin-react": "^7.31.8",
+    "jest-cli": "^29.1.1",
     "jest-immutable-matchers": "^3.0.0",
     "npm-check": "^6.0.1",
     "style-loader": "^3.3.1",
-    "ts-loader": "^9.3.0",
-    "webpack": "^5.72.1"
+    "ts-loader": "^9.4.1",
+    "webpack": "^5.74.0"
   },
   "dependencies": {
     "@docusaurus/react-loadable": "^5.5.2",
-    "@reduxjs/toolkit": "^1.8.2",
-    "@sentry/browser": "^6.19.7",
-    "classnames": "^2.3.1",
-    "immutable": "^4.0.0-rc.12",
+    "@reduxjs/toolkit": "^1.8.5",
+    "@sentry/browser": "^7.14.0",
+    "classnames": "^2.3.2",
+    "immutable": "^4.1.0",
     "jest": "^27.5.1",
-    "moment": "^2.29.3",
-    "node-sass": "^7.0.1",
+    "moment": "^2.29.4",
+    "node-sass": "^7.0.3",
     "react": "^17.0.2",
     "react-final-form": "^6.5.9",
     "react-notification-system-redux2": "^3.0.4",
-    "react-redux": "^8.0.1",
+    "react-redux": "^8.0.4",
     "react-simple-tooltip": "^2.6.3",
     "redux": "^4.2.0",
     "redux-injector": "^0.1.0",
-    "reselect": "^4.1.5",
-    "superagent": "^7.1.3"
+    "reselect": "^4.1.6",
+    "superagent": "^8.0.0"
   }
 }
