new eslint  + loaders

--- a/package.json
+++ b/package.json
@@ -87,13 +87,13 @@
     "@types/jest": "^29.2.0",
     "@types/superagent": "^4.1.15",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
-    "@typescript-eslint/parser": "^5.41.0",
+    "@typescript-eslint/parser": "^5.50.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "copy": "^0.3.2",
     "css-loader": "^6.7.1",
     "depcheck": "^1.4.3",
     "eslint": "^8.26.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-react": "^7.31.10",
     "jest-cli": "^29.2.2",
     "jest-immutable-matchers": "^3.0.0",
@@ -106,6 +106,7 @@
     "@docusaurus/react-loadable": "^5.5.2",
     "@reduxjs/toolkit": "^1.8.6",
     "classnames": "^2.3.2",
+    "eslint-import-resolver-typescript": "^3.5.3",
     "final-form": "^4.20.9",
     "immutable": "^4.1.0",
     "jest": "^27.5.1",
