--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "17.4.48",
+  "version": "17.4.54",
   "name": "x25",
   "description": "x25",
   "types": "./dist/index.d.ts",
@@ -10,6 +10,7 @@
     "intern-pre": "npm run eslint && npm run intern-clean && npm run intern-build",
     "intern-build-scss": "node-sass --output-style compressed src -o dist",
     "intern-copy": " copy package.json dist",
+    "lint": "npm run ts:check & npm run eslint",
     "intern-build": "npm run intern-build-scss",
     "intern-clean": "rimraf dist dist",
     "intern-test": "vitest",
